classDiagram

    Work *-- Chapter
    class Work {
        title: String! [faker: "book.title"]
        genre: String [faker: "book.genre"]
        author: String [faker: "book.author"]
        style_id: Style
        timeline_id: Timeline

        getByTitle(title: String): Work
        getByAuthor(name: String): [Work]
    }

    Chapter *-- Scene
    class Chapter {
        title: String!
        order: Int [minimum: 0]
        work_id: Work

        getByTitle(title: String): [Chapter]
    }

    Character *-- CharacterEvent
    Character *-- CharacterNote
    class Character {
        name: String! [faker: "person.fullName"]
        role: String [faker: "person.jobtype"]
        archetype: String
        description: String [faker: "person.bio"]

        getByName(name: String): [Character]
    }

    class CharacterNote {
        character_id: Character
        keywords: [String] [faker: "word.adjective"]
        note: String!

        getByKeywords(keywords: [String]): [CharacterNote]

    }

    class CharacterEvent {
        event_id: Event!
        character_id: Character!
    }

    Location *-- Event
    class Location {
        name: String!
        description: String
        keywords: [String] [faker: "word.adjective"]

        getByKeywords(keywords: [String]): [CharacterNote]
        getByName(name: String): [Location]
    }

    Plot *-- Work
    class Plot {
        name: String!
        description: String
        structure: String
    }

    Style *-- Work
    Style *-- Scene
    class Style {
        tone: String
        voice: String
        literaryInfluences: [String]
        pacing: String
    }
    
    Event *-- CharacterEvent
    Event *-- SceneEvent
    class Event {
        name: String!
        description: String
        eventDate: Date
        type: String
        timeline_id: Timeline
        location_id: Location

        getByName(name: String): Event
    }

    class SceneEvent {
        event_id: Event
        chapter_id: Chapter
    }

    Scene *-- SceneEvent
    class Scene {
        title: String!
        summary: String
        location: String
        characters: [Character]
        chapter_id: Chapter

        getByTitle(title: String): Scene
    }

    Timeline *-- Event
    Timeline *-- Work
    class Timeline {
        name: String!

        getByName(name: String): Timeline
    }